# qmidinet

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.in  Makefile.svn  README  README.cmake  TODO  configure.ac  qmidinet.1  qmidinet.fr.1  qmidinet.pro  qmidinet.spec.in
debian/: changelog  control  copyright  docs  rules
rpm/: qmidinet.spec
src/: CMakeLists.txt  cmake_config.h  cmake_config.h.in  config.h.cmake  qmidinet.cpp  qmidinet.desktop  qmidinet.desktop.in  qmidinet.h  qmidinet.qrc  qmidinetAbout.h  qmidinetAlsaMidiDevice.cpp  qmidinetAlsaMidiDevice.h  qmidinetJackMidiDevice.cpp  qmidinetJackMidiDevice.h  qmidinetMidiDevice.cpp  qmidinetMidiDevice.h  qmidinetOptions.cpp  qmidinetOptions.h  qmidinetOptionsForm.cpp  qmidinetOptionsForm.h  qmidinetOptionsForm.ui  qmidinetUdpDevice.cpp  qmidinetUdpDevice.h  src.pri.in  src.pro
src/appdata/: org.rncbc.qmidinet.desktop  org.rncbc.qmidinet.metainfo.xml  qmidinet.appdata.xml
src/images/: qmidinet.xcf
src/man1/: qmidinet.1  qmidinet.fr.1
